@@ -1,12 +1,17 @@
 package rpg.model;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Character {
-    protected final String name;
-    protected final int strength;
-    protected final int intelligence;
-    protected final int agility;
+
+    private final String name;
+    private final int strength;
+    private final int intelligence;
+    private final int agility;
+
+    private final List<String> abilities = new ArrayList<>();
 
     public Character(String name, int strength, int intelligence, int agility) {
         this.name = name;
@@ -20,8 +25,18 @@ public class Character {
     public int getIntelligence() { return intelligence; }
     public int getAgility() { return agility; }
 
+    public void addAbility(String ability) {
+        if (!abilities.contains(ability)) {
+            abilities.add(ability);
+        }
+    }
+
     public List<String> getAbilities() {
-        return List.of();
+        return Collections.unmodifiableList(abilities);
+    }
+
+    public boolean hasAbility(String ability) {
+        return abilities.contains(ability);
     }
 
     public int totalStats() {
@@ -30,9 +45,10 @@ public class Character {
 
     @Override
     public String toString() {
-        return name + " [STR=" + strength +
+        return name +
+                " [STR=" + strength +
                 ", INT=" + intelligence +
                 ", AGI=" + agility +
-                ", abilities=" + getAbilities() + "]";
+                ", abilities=" + abilities + "]";
     }
 }
